第二天  动态切换皮肤

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,7 @@
+code.analysis.excludes=
+file.reference.tp5-runtime=runtime
+ignore.path=\
+    ${file.reference.tp5-runtime}
 include.path=${php.global.include.path}
 php.version=PHP_56
 source.encoding=UTF-8
