--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -4,8 +4,10 @@ ignore.path=\
     ${file.reference.tp5-runtime}
 include.path=${php.global.include.path}
 php.version=PHP_56
+project.licensePath=./nbproject/licenseheader.txt
 source.encoding=UTF-8
 src.dir=.
 tags.asp=false
 tags.short=false
+testing.providers=
 web.root=.
